Button alignment issue fixed

--- a/src/pages/menu/menu.scss
+++ b/src/pages/menu/menu.scss
@@ -39,15 +39,7 @@ page-welcome {
     .item-md.item-block .item-inner {
         border: none !important;
     }
-    .button-inner {
-        justify-content: flex-start;
-    }
-    .button-md.activated {
-        color: #FFFFFF;
-    }
-    .button-ios.activated {
-        color: #FFFFFF;
-    }
+   
     .item-md ion-avatar ion-img,
     .item-md ion-avatar img {
         width: 46px;
