--- a/src/pages/slide1/slide1.scss
+++ b/src/pages/slide1/slide1.scss
@@ -10,4 +10,14 @@ slide1 {
         margin: 0;
     }
 
+     .button-inner {
+        justify-content: flex-start;
+    }
+    .button-md.activated {
+        color: #FFFFFF;
+    }
+    .button-ios.activated {
+        color: #FFFFFF;
+    }
+
 }
